SPI1 Configurado y funcional.

--- a/Sistemas Digitales II/TrabajosPracticos/MKL43Z_SD2_TP2_ACELEROMETRO/Debug/makefile
+++ b/Sistemas Digitales II/TrabajosPracticos/MKL43Z_SD2_TP2_ACELEROMETRO/Debug/makefile
@@ -10,6 +10,7 @@ RM := rm -rf
 -include sources.mk
 -include utilities/subdir.mk
 -include startup/subdir.mk
+-include source/Drivers/SSD1306/subdir.mk
 -include source/Drivers/PowerMode/subdir.mk
 -include source/Drivers/MMA8451/subdir.mk
 -include source/Drivers/Key/subdir.mk
